--- a/index.html
+++ b/index.html
@@ -1,207 +1,210 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
-    <head>
-        <title>Rodolfo</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="description" content="Projects and Creations" />
-        <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
-        <meta name="author" content="Rodolfo" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<head>
+  <title>Rodolfo</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta name="description" content="Projects and Creations" />
+  <meta name="keywords" content="RodolfoDiniz, Design, Portfolio" />
+  <meta name="author" content="Rodolfo" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="shortcut icon" href="images/favicon.ico" />
-        <link href='https://fonts.googleapis.com/css?family=Work%20Sans:400,500,700%7CUnna:400,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" type="text/css"  href='style.css' />
+  <link rel="shortcut icon" href="images/favicon.ico" />
+  <link href='https://fonts.googleapis.com/css?family=Work%20Sans:400,500,700%7CUnna:400,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" type="text/css"  href='style.css' />
 
-        <!--[if lt IE 9]>
-                <script src="js/html5shiv.js"></script>
-                <script src="js/respond.min.js"></script>
-        <![endif]-->
-    </head>
+  <!--[if lt IE 9]>
+  <script src="js/html5shiv.js"></script>
+  <script src="js/respond.min.js"></script>
+  <![endif]-->
+</head>
 
-    <body class="page-background">
+<body class="page-background">
 
-        <div class="site-wrapper">
-            <div class="doc-loader"></div>
+  <div class="site-wrapper">
+    <div class="doc-loader"></div>
 
-            <div class="menu-holder-front">
-                <div class="header-logo">
-                    <a href="index.html">
-                        <img src="images/logo.png" alt="Rodolfo">
-                    </a>
-                </div>
+    <div class="menu-holder-front">
+      <div class="header-logo">
+        <a href="index.html">
+          <img src="images/logo.png" alt="Rodolfo">
+        </a>
+      </div>
 
-                <div class="toggle-holder">
-                    <div id="toggle">
-                        <div class="menu-line"></div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="menu-holder-back">
-                <div class="menu-wrapper-back">
-                    <nav id="header-main-menu">
-                        <ul class="main-menu sm sm-clean">
-                            <li>
-                                <span class="menu-num">01</span>
-                                <a href="index.html">Home</a>
-                            </li>
-                            <li>
-                                <span class="menu-num">02</span>
-                                <a href="about.html">About</a>
-                            </li>
-                            <li>
-                                <span class="menu-num">03</span>
-                                <a href="blog.html">Blog</a>
-                            </li>
-                            <li>
-                                <span class="menu-num">04</span>
-                                <a href="contact.html">Contact</a>
-                            </li>
-                        </ul>
-                    </nav>
-
-                    <div class="menu-right-text">
-                        <p class="menu-text-title">EMAIL</p>
-                        <div class="menu-text">
-                            rodolfobiazi@icloud.com
-                        </div>
-                        <br>
-                        <p class="menu-text-title">PHONE</p>
-                        <div class="menu-text">
-                            +55 41 99708-2777
-                        </div>
-                        <br>
-                        <p class="menu-text-title">LOCATION</p>
-                        <div class="menu-text">
-
-                            Curitiba, PR<br>
-                            Brazil
-                        </div>
-                        <br>
-                        <div class="social-holder ">
-                            <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
-                            <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
-                            <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Page Content Holder -->
-            <div id="content" class="site-content">
-                <div class="content-holder center-relative content-1170">
-                    <div id="portfolio-wrapper">
-                        <ul class="grid" id="portfolio-grid">
-                            <li class="grid-sizer"></li>
-
-                            <li class="grid-item p_one_hlaf animate">
-                                <a class="item-link" href="single-portfolio.html">
-                                    <img src="images/home_02.png" alt="" />
-                                    <div class="portfolio-text-holder">
-                                        <p class="portfolio-title">LOGOTYPE</p>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li class="grid-item p_one_hlaf animate">
-                                <a class="item-link" href="single-portfolio.html">
-                                    <img src="images/home_02.png" alt="" />
-                                    <div class="portfolio-text-holder">
-                                        <p class="portfolio-title">LOGOTYPE</p>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <!-- <li class="grid-item p_one_hlaf animate">
-                                <a class="item-link" href="images/home_02B.jpg" data-rel="prettyPhoto[portfolio]">
-                                    <img src="images/home_02.jpg" alt="" />
-                                    <div class="portfolio-text-holder">
-                                        <p class="portfolio-title">MOCKUP</p>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li class="grid-item p_one_hlaf animate">
-                                <a class="item-link" href="https://vimeo.com/199192931" data-rel="prettyPhoto[portfolio]">
-                                    <img src="images/home_03.jpg" alt="" />
-                                    <div class="portfolio-text-holder">
-                                        <p class="portfolio-title">SNEAKERS</p>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li class="grid-item p_one animate">
-                                <a class="item-link" href="images/home_04.jpg" data-rel="prettyPhoto[portfolio]">
-                                    <img src="images/home_04.jpg" alt="" />
-                                    <div class="portfolio-text-holder">
-                                        <p class="portfolio-title">ARCHITECTURE</p>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li class="grid-item p_one_hlaf animate">
-                                <a class="item-link" href="single-portfolio.html">
-                                    <img src="images/home_05.jpg" alt="" />
-                                    <div class="portfolio-text-holder">
-                                        <p class="portfolio-title">ART</p>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li class="grid-item p_one_hlaf animate">
-                                <a class="item-link" href="images/home_06.jpg" data-rel="prettyPhoto[portfolio]">
-                                    <img src="images/home_06.jpg" alt="" />
-                                    <div class="portfolio-text-holder">
-                                        <p class="portfolio-title">OFFICE</p>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li class="grid-item p_one_hlaf animate">
-                                <a class="item-link" href="single-portfolio.html">
-                                    <img src="images/home_07.jpg" alt="" />
-                                    <div class="portfolio-text-holder">
-                                        <p class="portfolio-title">MODEL</p>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li class="grid-item p_one_hlaf animate">
-                                <a class="item-link" href="single-portfolio.html">
-                                    <img src="images/home_08.jpg" alt="" />
-                                    <div class="portfolio-text-holder">
-                                        <p class="portfolio-title">MOCKUP</p>
-                                    </div>
-                                </a>
-                            </li> -->
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <!-- End Page Content Holder -->
-
-            <footer class="footer">
-                <div class="footer-content center-relative">
-
-                    <div class="footer-logo">
-                        <img src="images/logo.png" alt="Rodolfo">
-                    </div>
-
-                    <div class="copyright-holder">
-                        © 2020 - Rodolfo
-                    </div>
-                </div>
-            </footer>
-
+      <div class="toggle-holder">
+        <div id="toggle">
+          <div class="menu-line"></div>
         </div>
+      </div>
+    </div>
 
-        <!--Load JavaScript-->
-        <script src="js/jquery.js"></script>
-        <script src='js/jquery.smartmenus.min.js'></script>
-        <script src='js/isotope.pkgd.js'></script>
-        <script src='js/jquery.prettyPhoto.js'></script>
-        <script src='js/swiper.min.js'></script>
-        <script src='js/main.js'></script>
-    </body>
+    <div class="menu-holder-back">
+      <div class="menu-wrapper-back">
+        <nav id="header-main-menu">
+          <ul class="main-menu sm sm-clean">
+            <li>
+              <span class="menu-num">01</span>
+              <a href="index.html">Home</a>
+            </li>
+            <li>
+              <span class="menu-num">02</span>
+              <a href="about.html">About</a>
+            </li>
+            <li>
+              <span class="menu-num">03</span>
+              <a href="blog.html">Blog</a>
+            </li>
+            <li>
+              <span class="menu-num">04</span>
+              <a href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </nav>
+
+        <div class="menu-right-text">
+          <p class="menu-text-title">EMAIL</p>
+          <div class="menu-text">
+            rodolfobiazi@icloud.com
+          </div>
+          <br>
+          <p class="menu-text-title">PHONE</p>
+          <div class="menu-text">
+            +55 41 99708-2777
+          </div>
+          <br>
+          <p class="menu-text-title">LOCATION</p>
+          <div class="menu-text">
+
+            Curitiba, PR<br>
+            Brazil
+          </div>
+          <br>
+          <div class="social-holder ">
+            <a class="social-text" href="https://www.twitter.com/RodolfoDiniz" target="_blank">TWITTER</a>
+            <a class="social-text" href="https://www.facebook.com/RodolfoBiazi" target="_blank">FACEBOOK</a>
+            <a class="social-text" href="https://www.instagram.com/RodolfoDiniz" target="_blank">INSTAGRAM</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Page Content Holder -->
+    <div id="content" class="site-content">
+      <div class="content-holder center-relative content-1170">
+        <div id="portfolio-wrapper">
+          <ul class="grid" id="portfolio-grid">
+            <li class="grid-sizer"></li>
+
+<!--
+            <li class="grid-item p_one animate">
+              <a class="item-link" href="images/home_04a.png" data-rel="prettyPhoto[portfolio]">
+                <img src="images/home_04a.png" alt="" />
+                <div class="portfolio-text-holder">
+                  <p class="portfolio-title">PROJECT</p>
+                </div>
+              </a>
+            </li> -->
+
+            <li class="grid-item p_one animate">
+              <a class="item-link" href="project-cubx.html">
+                <img src="images/home_04a.png" alt="" />
+                <div class="portfolio-text-holder">
+                  <p class="portfolio-title">EXPERIENCE</p>
+                </div>
+              </a>
+            </li>
+
+
+            <li class="grid-item p_one_hlaf animate">
+              <a class="item-link" href="project-ads.html">
+                <img src="images/home_02.png" alt="" />
+                <div class="portfolio-text-holder">
+                  <p class="portfolio-title">LOGOTYPE</p>
+                </div>
+              </a>
+            </li>
+
+
+            <!-- <li class="grid-item p_one_hlaf animate">
+            <a class="item-link" href="images/home_02B.jpg" data-rel="prettyPhoto[portfolio]">
+            <img src="images/home_02.jpg" alt="" />
+            <div class="portfolio-text-holder">
+            <p class="portfolio-title">MOCKUP</p>
+          </div>
+        </a>
+      </li> -->
+
+      <li class="grid-item p_one_hlaf animate">
+      <a class="item-link" href="https://vimeo.com/199192931" data-rel="prettyPhoto[portfolio]">
+      <img src="images/home_03.jpg" alt="" />
+      <div class="portfolio-text-holder">
+      <p class="portfolio-title">SNEAKERS</p>
+    </div>
+  </a>
+</li>
+
+<li class="grid-item p_one_hlaf animate">
+  <a class="item-link" href="single-portfolio.html">
+    <img src="images/home_05.jpg" alt="" />
+    <div class="portfolio-text-holder">
+      <p class="portfolio-title">ART</p>
+    </div>
+  </a>
+</li>
+
+<li class="grid-item p_one_hlaf animate">
+  <a class="item-link" href="images/home_06.jpg" data-rel="prettyPhoto[portfolio]">
+    <img src="images/home_06.jpg" alt="" />
+    <div class="portfolio-text-holder">
+      <p class="portfolio-title">OFFICE</p>
+    </div>
+  </a>
+</li>
+
+<li class="grid-item p_one_hlaf animate">
+  <a class="item-link" href="single-portfolio.html">
+    <img src="images/home_07.jpg" alt="" />
+    <div class="portfolio-text-holder">
+      <p class="portfolio-title">MODEL</p>
+    </div>
+  </a>
+</li>
+
+<li class="grid-item p_one_hlaf animate">
+  <a class="item-link" href="single-portfolio.html">
+    <img src="images/home_08.jpg" alt="" />
+    <div class="portfolio-text-holder">
+      <p class="portfolio-title">MOCKUP</p>
+    </div>
+  </a>
+</li>
+
+</ul>
+</div>
+</div>
+</div>
+<!-- End Page Content Holder -->
+
+<footer class="footer">
+  <div class="footer-content center-relative">
+
+    <div class="footer-logo">
+      <img src="images/logo.png" alt="Rodolfo">
+    </div>
+
+    <div class="copyright-holder">
+      © 2020 - Rodolfo
+    </div>
+  </div>
+</footer>
+
+</div>
+
+<!--Load JavaScript-->
+<script src="js/jquery.js"></script>
+<script src='js/jquery.smartmenus.min.js'></script>
+<script src='js/isotope.pkgd.js'></script>
+<script src='js/jquery.prettyPhoto.js'></script>
+<script src='js/swiper.min.js'></script>
+<script src='js/main.js'></script>
+</body>
 </html>
